Remove legacy Nashorn class discovery and set ECMA version to "latest"
- Since Java 17 Nashorn is not included in the JVM and we support Nashorn only through our (optional) plug-in

- Set polyglot.js.ecmascript-version to "latest" to always have the latest ECMA support